[metadata]
name = plover_retro_quotes
version = 0.0.2
description = Add single- and double-quotes to previously-typed words.
author = Waleed Khan
author_email = me@waleedkhan.name
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/arxanas/plover_retro_quotes
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages = find:

[options.entry_points]
plover.meta =
    retro_single_quotes = plover_retro_quotes:retro_single_quotes
    retro_double_quotes = plover_retro_quotes:retro_double_quotes
